@@ -58,6 +58,7 @@ import io.strimzi.test.mockkube2.controllers.MockPodController;
 import io.vertx.core.AsyncResult;
 import io.vertx.core.Handler;
 import io.vertx.core.Vertx;
+import io.vertx.core.WorkerExecutor;
 import io.vertx.junit5.VertxExtension;
 import io.vertx.junit5.VertxTestContext;
 import org.apache.kafka.clients.admin.Admin;
@@ -72,7 +73,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 
-import java.util.Date;
+import java.time.Clock;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -141,10 +142,13 @@ public class KubernetesRestartEventsMockTest {
     private final ClusterOperatorConfig useStrimziPodSetsConfig = dummyClusterOperatorConfig();
 
     private KafkaStatus ks;
-    private final Supplier<Date> ds = Date::new;
+
+    @SuppressWarnings("unused")
+    private WorkerExecutor sharedWorkerExecutor;
 
     @BeforeEach
     void setup(Vertx vertx) throws ExecutionException, InterruptedException {
+        sharedWorkerExecutor = vertx.createSharedWorkerExecutor("kubernetes-ops-pool");
         mockKube = new MockKube2.MockKube2Builder(client)
                 .withMockWebServerLoggingSettings(Level.WARNING, true)
                 .withKafkaCrd()
@@ -165,7 +169,7 @@ public class KubernetesRestartEventsMockTest {
                 PFA,
                 60_000);
 
-        podSetController = new StrimziPodSetController(NAMESPACE, Labels.EMPTY, supplier.kafkaOperator, supplier.strimziPodSetOperator, supplier.podOperations, ClusterOperatorConfig.DEFAULT_POD_SET_CONTROLLER_WORK_QUEUE_SIZE);
+        podSetController = new StrimziPodSetController(NAMESPACE, Labels.EMPTY, supplier.kafkaOperator, supplier.strimziPodSetOperator, supplier.podOperations, supplier.metricsProvider, ClusterOperatorConfig.DEFAULT_POD_SET_CONTROLLER_WORK_QUEUE_SIZE);
         podSetController.start();
 
         // Initial reconciliation to create cluster
@@ -208,7 +212,7 @@ public class KubernetesRestartEventsMockTest {
                 vertx
         );
 
-        lowerVolumes.reconcile(ks, ds).onComplete(verifyEventPublished(POD_HAS_OLD_REVISION, context));
+        lowerVolumes.reconcile(ks, Clock.systemUTC()).onComplete(verifyEventPublished(POD_HAS_OLD_REVISION, context));
     }
 
     @Test
@@ -228,7 +232,7 @@ public class KubernetesRestartEventsMockTest {
 
         pvcOps().resource(patch).replace();
 
-        defaultReconciler(vertx).reconcile(ks, ds).onComplete(verifyEventPublished(FILE_SYSTEM_RESIZE_NEEDED, context));
+        defaultReconciler(vertx).reconcile(ks, Clock.systemUTC()).onComplete(verifyEventPublished(FILE_SYSTEM_RESIZE_NEEDED, context));
     }
 
     @Test
@@ -248,7 +252,7 @@ public class KubernetesRestartEventsMockTest {
                 PFA,
                 vertx);
 
-        reconciler.reconcile(ks, ds).onComplete(verifyEventPublished(CA_CERT_HAS_OLD_GENERATION, context));
+        reconciler.reconcile(ks, Clock.systemUTC()).onComplete(verifyEventPublished(CA_CERT_HAS_OLD_GENERATION, context));
     }
 
     @Test
@@ -272,7 +276,7 @@ public class KubernetesRestartEventsMockTest {
                 PFA,
                 vertx);
 
-        reconciler.reconcile(ks, ds).onComplete(verifyEventPublished(CA_CERT_REMOVED, context));
+        reconciler.reconcile(ks, Clock.systemUTC()).onComplete(verifyEventPublished(CA_CERT_REMOVED, context));
     }
 
     @Test
@@ -296,7 +300,7 @@ public class KubernetesRestartEventsMockTest {
                 PFA,
                 vertx);
 
-        reconciler.reconcile(ks, ds).onComplete(verifyEventPublished(CA_CERT_RENEWED, context));
+        reconciler.reconcile(ks, Clock.systemUTC()).onComplete(verifyEventPublished(CA_CERT_RENEWED, context));
     }
 
     @Test
@@ -314,7 +318,7 @@ public class KubernetesRestartEventsMockTest {
         patchClusterSecretWithAnnotation(Ca.ANNO_STRIMZI_IO_CLIENTS_CA_CERT_GENERATION, "100000");
 
         CaReconciler reconciler = new CaReconciler(reconciliation, kafkaWithoutClientCaGen, useStrimziPodSetsConfig, supplier, vertx, mockCertManager, passwordGenerator);
-        reconciler.reconcile(ds).onComplete(verifyEventPublished(CLIENT_CA_CERT_KEY_REPLACED, context));
+        reconciler.reconcile(Clock.systemUTC()).onComplete(verifyEventPublished(CLIENT_CA_CERT_KEY_REPLACED, context));
     }
 
     @Test
@@ -332,7 +336,7 @@ public class KubernetesRestartEventsMockTest {
         patchClusterSecretWithAnnotation(Ca.ANNO_STRIMZI_IO_CLUSTER_CA_CERT_GENERATION, "100001");
 
         CaReconciler reconciler = new CaReconciler(reconciliation, kafkaWithoutClusterCaGen, useStrimziPodSetsConfig, supplier, vertx, mockCertManager, passwordGenerator);
-        reconciler.reconcile(ds).onComplete(verifyEventPublished(CLUSTER_CA_CERT_KEY_REPLACED, context));
+        reconciler.reconcile(Clock.systemUTC()).onComplete(verifyEventPublished(CLUSTER_CA_CERT_KEY_REPLACED, context));
     }
 
     @Test
@@ -353,7 +357,7 @@ public class KubernetesRestartEventsMockTest {
                 PFA,
                 vertx);
 
-        reconciler.reconcile(ks, ds).onComplete(verifyEventPublished(CONFIG_CHANGE_REQUIRES_RESTART, context));
+        reconciler.reconcile(ks, Clock.systemUTC()).onComplete(verifyEventPublished(CONFIG_CHANGE_REQUIRES_RESTART, context));
     }
 
     @Test
@@ -361,14 +365,14 @@ public class KubernetesRestartEventsMockTest {
         // Change custom listener cert thumbprint annotation to cause reconciliation requiring restart
         patchKafkaPodWithAnnotation(PodRevision.STRIMZI_REVISION_ANNOTATION, "doesnotmatchthepodset");
 
-        defaultReconciler(vertx).reconcile(ks, ds).onComplete(verifyEventPublished(POD_HAS_OLD_REVISION, context));
+        defaultReconciler(vertx).reconcile(ks, Clock.systemUTC()).onComplete(verifyEventPublished(POD_HAS_OLD_REVISION, context));
     }
 
     @Test
     void testEventEmittedWhenPodAnnotatedForManualRollingUpdate(Vertx vertx, VertxTestContext context) {
         patchKafkaPodWithAnnotation(ANNO_STRIMZI_IO_MANUAL_ROLLING_UPDATE, "true");
 
-        defaultReconciler(vertx).reconcile(ks, ds).onComplete(verifyEventPublished(MANUAL_ROLLING_UPDATE, context));
+        defaultReconciler(vertx).reconcile(ks, Clock.systemUTC()).onComplete(verifyEventPublished(MANUAL_ROLLING_UPDATE, context));
     }
 
     @Test
@@ -383,7 +387,7 @@ public class KubernetesRestartEventsMockTest {
                         .endMetadata()
                         .build());
 
-        defaultReconciler(vertx).reconcile(ks, ds).onComplete(verifyEventPublished(MANUAL_ROLLING_UPDATE, context));
+        defaultReconciler(vertx).reconcile(ks, Clock.systemUTC()).onComplete(verifyEventPublished(MANUAL_ROLLING_UPDATE, context));
     }
 
     @Test
@@ -405,7 +409,7 @@ public class KubernetesRestartEventsMockTest {
                 PFA,
                 vertx);
 
-        reconciler.reconcile(ks, ds).onComplete(verifyEventPublished(POD_UNRESPONSIVE, context));
+        reconciler.reconcile(ks, Clock.systemUTC()).onComplete(verifyEventPublished(POD_UNRESPONSIVE, context));
     }
 
     @Test
@@ -432,7 +436,7 @@ public class KubernetesRestartEventsMockTest {
 
         podOps().resource(patch).replace();
 
-        defaultReconciler(vertx).reconcile(ks, ds).onComplete(verifyEventPublished(POD_STUCK, context));
+        defaultReconciler(vertx).reconcile(ks, Clock.systemUTC()).onComplete(verifyEventPublished(POD_STUCK, context));
     }
 
     @Test
@@ -449,7 +453,7 @@ public class KubernetesRestartEventsMockTest {
         );
 
         KafkaReconciler reconciler = new KafkaReconciler(reconciliation, KAFKA, null, 1, changedCa, clientsCa, VERSION_CHANGE, useStrimziPodSetsConfig, supplier, PFA, vertx);
-        reconciler.reconcile(ks, ds).onComplete(verifyEventPublished(KAFKA_CERTIFICATES_CHANGED, context));
+        reconciler.reconcile(ks, Clock.systemUTC()).onComplete(verifyEventPublished(KAFKA_CERTIFICATES_CHANGED, context));
 
     }
 
@@ -462,7 +466,7 @@ public class KubernetesRestartEventsMockTest {
             Optional<Event> maybeEvent = events.stream().filter(e -> e.getReason().equals(expectedReasonPascal)).findFirst();
 
             if (maybeEvent.isEmpty()) {
-                List<String> foundEvents = listRestartEvents().stream().map(Event::getReason).collect(Collectors.toList());
+                List<String> foundEvents = listRestartEvents().stream().map(Event::getReason).toList();
                 throw new AssertionError("Expected restart event " + expectedReasonPascal + " not found. Found these events: " + foundEvents);
             }
 
